Redesign Fire VFX with vanilla Minecraft assets
- Replace custom Fire textures and particles with vanilla flame, magma, and netherrack effects
- Add model-based Inferno Wave and Pyre Flame rendering
- Consolidate repository guidance in AGENT.md